fixed scrolling issue on small mobile devices

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,10 @@
 .container {
   padding: 0 2rem;
-  position: fixed;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
+  min-height: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  align-items: center;
 }
 
 .main {
